// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToastContainer matches snapshot 1`] = `
<div
  className="sc-gsnTZi bQKHKA"
>
  <div
    aria-live="polite"
    className="sc-bczRLJ jAZNhq"
  >
    <div
      className="neutral"
    >
      <div
        className="title"
      >
        Neutral
      </div>
      <div
        className="body"
      >
        message
      </div>
    </div>
  </div>
  <div
    aria-live="polite"
    className="sc-bczRLJ cWrNHg"
  >
    <div
      className="failure"
    >
      <div
        className="title"
      >
        Error
      </div>
      <div
        className="body"
      >
        message
      </div>
    </div>
  </div>
  <div
    aria-live="polite"
    className="sc-bczRLJ loazPe"
  >
    <div
      className="success"
    >
      <div
        className="title"
      >
        Success
      </div>
      <div
        className="body"
      >
        message
      </div>
    </div>
  </div>
</div>
`;

exports[`ToastContainer uses inline prop 1`] = `
<div
  className="sc-gsnTZi gRYEVl"
>
  <div
    aria-live="polite"
    className="sc-bczRLJ jSNerL"
  >
    <div
      className="neutral"
    >
      <div
        className="title"
      >
        Neutral
      </div>
      <div
        className="body"
      >
        message
      </div>
    </div>
  </div>
  <div
    aria-live="polite"
    className="sc-bczRLJ fgCwHl"
  >
    <div
      className="failure"
    >
      <div
        className="title"
      >
        Error
      </div>
      <div
        className="body"
      >
        message
      </div>
    </div>
  </div>
  <div
    aria-live="polite"
    className="sc-bczRLJ dGEkoL"
  >
    <div
      className="success"
    >
      <div
        className="title"
      >
        Success
      </div>
      <div
        className="body"
      >
        message
      </div>
    </div>
  </div>
</div>
`;
